tests/success/index_out_of_range.tig
let
    type arr = array of int
    var a := arr[2] of 0
in
    printi(a[3])
end
